# tourist-types-rs

./: Cargo.toml
src/: lib.rs
src/path/: absolute.rs  mod.rs  relative.rs
