[package]
name = "tourist-types"
version = "0.1.0"
authors = ["Harrison Goldstein <hgoldstein95@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Type definitions for the tourist documentation system."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "2.0"